# bereal-gdpr-photo-toolkit

./: .gitignore  README.md  mise.toml  process-photos.py  pyproject.toml
web/: README.md  app.js  debug-guide.md  demo.html  deploy.sh  index.html  styles.css  worker.js
